--- a/TicTacToe/nbproject/private/private.properties
+++ b/TicTacToe/nbproject/private/private.properties
@@ -1,2 +1,1 @@
-compile.on.save=true
-user.properties.file=C:\\Users\\jhon\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\Juanjo\\AppData\\Roaming\\NetBeans\\17\\build.properties
